fin (1.51-1) stable; urgency=medium

  * Compile instructions in README and manpage for OpenSUSE and bcrypt

  * Monthly and yearly totals when searching

  * Colour changes for better readability

  * Summary of accounts

 -- Bob Mottram (4096 bits) <bob@robotics.uk.to>  Sat, 04 May 2013 18:32:00 +0100

fin (1.50-1) stable; urgency=medium

  * Adjustments description spans multiple lines

  * Backup and restore commands

  * Bug fix for balance value in monthly listing for a given year

  * Monthly and yearly transaction volumes

  * Removed version control files from source package

  * Transaction volume totals

 -- Bob Mottram (4096 bits) <bob@robotics.uk.to>  Sat, 09 Mar 2013 17:47:00 +0100

fin (1.41-1) unstable; urgency=low

  * Import transactions from GnuCash

  * Edits and deletions
    are recorded in an adjustments table

  * Time of transaction included with date

  * Pie charts can now be plotted

 -- Bob Mottram (4096 bits) <bob@robotics.uk.to>  Tue, 09 Oct 2012 18:00:00 +0100

fin (1.40-1) unstable; urgency=low

  * Improvements to import function
    Data can be exported from Paypal as csv and imported into
    fin with no editing required. Also a bug related to the
    transaction numbers during the import process was fixed.

  * Multiple search criteria are now allowed
    Search string can contain multiple fields separated by commas

  * Spending distribution graph

  * Colour coding
    Of positive/negative incoming/outgoing figures

  * Long descriptions
    Are now displayed over multiple rows

  * Three digit record numbers
    Should be enough to cover most situations

  * More unit test coverage

  * Short status messages
    Including forecasting of when funds will be depleted

  * General code tidying
    Try to keep most lines to less than 80 characters

  * Debian packaging improvements
    Now passes lintian tests

 -- Bob Mottram (4096 bits) <bob@robotics.uk.to>  Tue, 02 Oct 2012 20:00:00 +0100