@@ -1,1 +1,1 @@
-fin-1.51-1|fin|1.51|1|Desktop|2.0M||fin-1.51-1.pet|+sqlite3_3.7.9,+gnuplot_4.4.3,+bcrypt-1.1|Command line personal finances manager|ubuntu|precise|5|
+fin-1.51-1|fin|1.51|1|Desktop|2.3M||fin-1.51-1.pet|+sqlite3_3.7.9,+gnuplot_4.4.3,+bcrypt-1.1|Command line personal finances manager|ubuntu|precise|5|
